# NavigationSystem

./: CMakeLists.txt  README.md
docs/: architecture-guide.md
src/: CMakeLists.txt
src/core/algorithms/: DijkstraPathFinder.cpp  DynamicPathFinder.cpp
src/core/generation/: GridPerturbationGenerator.cpp  HierarchicalRoadGenerator.cpp
src/core/graph/: Edge.cpp  Edge.h  Graph.cpp
src/core/io/: GraphIO.cpp
src/core/spatial/: ClusterIndex.cpp  ClusterIndex.h  QuadTree.cpp  QuadTree.h
src/core/traffic/: TrafficModel.cpp  TrafficModel.h  TrafficSimulator.cpp  TrafficSimulator.h
src/gui/: MainWindow.cpp  MainWindow.h
src/gui/items/: ClusterItem.cpp  ClusterItem.h  EdgeItem.cpp  EdgeItem.h  NodeItem.cpp  NodeItem.h  RoadStyle.h
src/gui/view/: DisplayFilter.h  MapScene.cpp  MapScene.h  MapView.cpp  MapView.h
src/gui/widgets/: ControlPanel.cpp  ControlPanel.h
